[tool.poetry]
name = "cvm_count"
version = "0.1.1"
description = ""
authors = ["jinh-tech <5562645+jinh-tech@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
twine = "^5.1.0"
joblib = "^1.4.2"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
