[metadata]
name = cvm
version = 0.1.1
author = Nitish Joshi
author_email = author@example.com
summary = Python implementation of the CVM algorithm
description = Python implementation of the CVM algorithm which estimates the number of unique items in a stream.
long_description = file: README.md
long_description_content_type = text/markdown
url = package url
project_urls =
    Bug Tracker = package issues url
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src